--- a/app/src/main/res/layout/fragment_main_item.xml
+++ b/app/src/main/res/layout/fragment_main_item.xml
@@ -58,18 +58,22 @@
             app:layout_constraintTop_toTopOf="@+id/main_item_instant_image"
             app:layout_constraintEnd_toEndOf="parent"
             android:paddingTop="2dp"/>
+
     <TextView
-            android:text="99+"
-            android:layout_width="24dp"
-            android:layout_height="24dp" android:id="@+id/main_item_new"
-            android:layout_marginTop="3dp"
-            android:layout_gravity="center"
-            android:background="@drawable/ic_circle"
-            android:gravity="center"
-            android:textColor="@android:color/white"
-            app:layout_constraintTop_toBottomOf="@+id/main_item_date"
-            app:layout_constraintEnd_toEndOf="@+id/main_item_date"
-            app:layout_constraintStart_toEndOf="@+id/main_item_instant_image"
-            android:textSize="10sp" android:textStyle="bold"/>
+        android:id="@+id/main_item_new"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="3dp"
+        android:background="@drawable/ic_circle"
+        android:backgroundTint="@color/material_dynamic_primary90"
+        android:gravity="center"
+        android:text="99+"
+        android:textColor="@color/material_dynamic_secondary10"
+        android:textSize="10sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/main_item_date"
+        app:layout_constraintStart_toEndOf="@+id/main_item_instant_image"
+        app:layout_constraintTop_toBottomOf="@+id/main_item_date" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
