--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -1,41 +1,10 @@
 <resources>
-    <!--
-        This file contains only overrides for the dark theme.
-        Also see "ui/Colors.kt" for colors that have to be defined in code.
+    <!-- Main app theme; dark theme styles see values-night/styles.xml -->
+    <style name="AppTheme" parent="Theme.Material3.DynamicColors.DayNight" />
 
-        Resources:
-        - https://material.io/design/color/dark-theme.html
-        - https://material.io/develop/android/theming/dark
-        - https://developer.android.com/codelabs/basic-android-kotlin-training-change-app-theme#4
-        - https://developer.android.com/guide/topics/ui/look-and-feel/themes
-   -->
-
-    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <item name="colorPrimary">@color/teal_light</item>
-        <item name="colorAccent">@color/teal_light</item> <!-- checkboxes, text fields -->
-        <item name="android:colorBackground">@color/black</item> <!-- background -->
-        <item name="android:statusBarColor">@color/black</item>
-        <item name="actionModeBackground">@color/black</item>
-
-        <!-- Action bar background & text color -->
-        <item name="colorSurface">@color/black</item>
-        <item name="colorOnSurface">@color/white</item>
-    </style>
-
-    <style name="DangerText" parent="@android:style/TextAppearance">
-        <item name="android:textColor">@color/red_light</item>
-    </style>
-
-    <style name="FloatingActionButton" parent="@style/Widget.MaterialComponents.FloatingActionButton">
-        <item name="tint">@color/black_900</item>
-        <item name="backgroundTint">@color/teal_light</item>
-    </style>
-
-    <style name="CardView" parent="@style/Widget.MaterialComponents.CardView">
-        <item name="cardBackgroundColor">@color/black</item>
-    </style>
-
-    <style name="CardViewBackground">
-        <item name="android:background">@color/black_900</item>
+    <!-- Rounded corners in images, see https://stackoverflow.com/a/61960983/1440785 -->
+    <style name="roundedCornersImageView" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">5dp</item>
     </style>
 </resources>
