--- a/app/src/main/res/layout/fragment_main_item.xml
+++ b/app/src/main/res/layout/fragment_main_item.xml
@@ -51,20 +51,23 @@
             android:id="@+id/main_item_instant_image"
             app:layout_constraintTop_toTopOf="@+id/main_item_notification_disabled_forever_image"
             app:layout_constraintEnd_toStartOf="@+id/main_item_date" android:paddingTop="3dp"/>
+
     <TextView
-            android:text="10:13"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/main_item_date"
-            app:layout_constraintTop_toTopOf="@+id/main_item_instant_image"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:paddingTop="2dp"/>
+        android:id="@+id/main_item_date"
+        android:layout_width="30dp"
+        android:layout_height="1dp"
+        android:alpha="0"
+        android:paddingTop="2dp"
+        android:text="10:13"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/main_item_instant_image" />
 
     <TextView
         android:id="@+id/main_item_new"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_gravity="center"
-        android:layout_marginTop="3dp"
+        android:layout_marginTop="-1dp"
         android:background="@drawable/ic_circle"
         android:backgroundTint="@color/material_dynamic_primary90"
         android:gravity="center"
