--- a/app/src/main/res/menu/menu_main_action_bar.xml
+++ b/app/src/main/res/menu/menu_main_action_bar.xml
@@ -1,9 +1,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/main_menu_notifications_enabled" android:title="@string/main_menu_notifications_enabled"
-          app:showAsAction="ifRoom" android:icon="@drawable/ic_notifications_white_24dp"/>
-    <item android:id="@+id/main_menu_notifications_disabled_until" android:title="@string/main_menu_notifications_disabled_forever"
-          app:showAsAction="ifRoom" android:icon="@drawable/ic_notifications_off_time_white_outline_24dp"/>
-    <item android:id="@+id/main_menu_notifications_disabled_forever" android:title="@string/detail_menu_notifications_disabled_forever"
-          app:showAsAction="ifRoom" android:icon="@drawable/ic_notifications_off_white_outline_24dp"/>
-    <item android:id="@+id/main_menu_settings" android:title="@string/main_menu_settings_title"/>
+    <item
+        android:id="@+id/main_menu_notifications_enabled"
+        android:icon="@drawable/ic_notifications_white_24dp"
+        android:title="@string/main_menu_notifications_enabled"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/main_menu_notifications_disabled_until"
+        android:icon="@drawable/ic_notifications_off_time_white_outline_24dp"
+        android:title="@string/main_menu_notifications_disabled_forever"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/main_menu_notifications_disabled_forever"
+        android:icon="@drawable/ic_notifications_off_white_outline_24dp"
+        android:title="@string/detail_menu_notifications_disabled_forever"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/main_menu_settings"
+        android:icon="@drawable/ic_settings_24dp"
+        android:title="@string/main_menu_settings_title"
+        app:showAsAction="always" />
 </menu>
