--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,9 +8,9 @@
     <color name="gray_400">#eeeeee</color> <!-- Item selection (light mode) -->
     <color name="white">#ffffffff</color>
 
-    <color name="teal">#ff0000</color> <!-- Primary color (light mode) -->
-    <color name="teal_light">#ff0000</color> <!-- Primary color (dark mode) -->
-    <color name="teal_dark">#ff0000</color> <!-- Action bar background in action mode (light mode) -->
+    <color name="teal">#FF84FF</color> <!-- Primary color (light mode) -->
+    <color name="teal_light">#FFE9FE</color> <!-- Primary color (dark mode) -->
+    <color name="teal_dark">#FF84FF</color> <!-- Action bar background in action mode (light mode) -->
     <color name="red_light">#fe4d2e</color> <!-- Danger text (dark mode) -->
     <color name="red_dark">#c30000</color> <!-- Danger text (light mode) -->
 </resources>
